compiler/bison.output
Terminaux inutilisés dans la grammaire

    tERROR


Grammaire

    0 $accept: program $end

    1 program: %empty
    2        | program function

    3 $@1: %empty

    4 function: $@1 tVOID tID tLPAR parameters tRPAR tLBRACE statement tRBRACE

    5 $@2: %empty

    6 function: $@2 tINT tID tLPAR parameters tRPAR tLBRACE statement Return tSEMI tRBRACE

    7 statement: %empty
    8          | declarations_int tSEMI statement
    9          | declarations_const tSEMI statement
   10          | assign tSEMI statement
   11          | while statement
   12          | if statement
   13          | print statement

   14 declarations_int: tINT declaration_int declarations1_int

   15 declaration_int: tID
   16                | tID tASSIGN term

   17 declarations1_int: %empty
   18                  | tCOMMA declaration_int declarations1_int

   19 declarations_const: tCONST declaration_const declarations1_const

   20 declaration_const: tID
   21                  | tID tASSIGN term

   22 declarations1_const: %empty
   23                    | tCOMMA declaration_const declarations1_const

   24 parameters: parameter
   25           | parameters tCOMMA parameter

   26 parameter: %empty
   27          | tVOID
   28          | tINT tID

   29 $@3: %empty

   30 body: tLBRACE $@3 statement tRBRACE

   31 while: tWHILE tLPAR expression tRPAR body

   32 print: tPRINT tLPAR tID tRPAR tSEMI

   33 Return: tRETURN term

   34 if: tIF tLPAR expression tRPAR body
   35   | tIF tLPAR expression tRPAR body tELSE body
   36   | tIF tLPAR logique tRPAR body
   37   | tIF tLPAR logique tRPAR body tELSE body

   38 assign: tID tASSIGN term

   39 term: tID
   40     | tNB
   41     | term tSUB term
   42     | term tADD term
   43     | term tMUL term
   44     | term tDIV term
   45     | tID tLPAR args tRPAR

   46 args: term
   47     | term tCOMMA args

   48 expression: term tNE term
   49           | term tEQ term
   50           | term tGE term
   51           | term tLE term
   52           | term tLT term
   53           | term tGT term

   54 logique: expression tAND expression
   55        | expression tOR expression
   56        | tNOT expression


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tIF (258) 34 35 36 37
    tELSE (259) 35 37
    tWHILE (260) 31
    tPRINT (261) 32
    tRETURN (262) 33
    tINT (263) 6 14 28
    tVOID (264) 4 27
    tCONST (265) 19
    tADD (266) 42
    tSUB (267) 41
    tMUL (268) 43
    tDIV (269) 44
    tASSIGN (270) 16 21 38
    tLBRACE (271) 4 6 30
    tRBRACE (272) 4 6 30
    tLPAR (273) 4 6 31 32 34 35 36 37 45
    tRPAR (274) 4 6 31 32 34 35 36 37 45
    tSEMI (275) 6 8 9 10 32
    tCOMMA (276) 18 23 25 47
    tID <var> (277) 4 6 15 16 20 21 28 32 38 39 45
    tNB <num> (278) 40
    tERROR (279)
    tAND (280) 54
    tNOT (281) 56
    tOR (282) 55
    tEQ (283) 49
    tNE (284) 48
    tLT (285) 52
    tLE (286) 51
    tGT (287) 53
    tGE (288) 50


Non-terminaux, suivis des règles où ils apparaissent

    $accept (34)
        à gauche: 0
    program (35)
        à gauche: 1 2
        à droite: 0 2
    function (36)
        à gauche: 4 6
        à droite: 2
    $@1 (37)
        à gauche: 3
        à droite: 4
    $@2 (38)
        à gauche: 5
        à droite: 6
    statement (39)
        à gauche: 7 8 9 10 11 12 13
        à droite: 4 6 8 9 10 11 12 13 30
    declarations_int (40)
        à gauche: 14
        à droite: 8
    declaration_int (41)
        à gauche: 15 16
        à droite: 14 18
    declarations1_int (42)
        à gauche: 17 18
        à droite: 14 18
    declarations_const (43)
        à gauche: 19
        à droite: 9
    declaration_const (44)
        à gauche: 20 21
        à droite: 19 23
    declarations1_const (45)
        à gauche: 22 23
        à droite: 19 23
    parameters (46)
        à gauche: 24 25
        à droite: 4 6 25
    parameter (47)
        à gauche: 26 27 28
        à droite: 24 25
    body (48)
        à gauche: 30
        à droite: 31 34 35 36 37
    $@3 (49)
        à gauche: 29
        à droite: 30
    while (50)
        à gauche: 31
        à droite: 11
    print (51)
        à gauche: 32
        à droite: 13
    Return (52)
        à gauche: 33
        à droite: 6
    if (53)
        à gauche: 34 35 36 37
        à droite: 12
    assign (54)
        à gauche: 38
        à droite: 10
    term (55)
        à gauche: 39 40 41 42 43 44 45
        à droite: 16 21 33 38 41 42 43 44 46 47 48 49 50 51 52 53
    args (56)
        à gauche: 46 47
        à droite: 45 47
    expression (57)
        à gauche: 48 49 50 51 52 53
        à droite: 31 34 35 54 55 56
    logique (58)
        à gauche: 54 55 56
        à droite: 36 37


État 0

    0 $accept: . program $end

    $défaut  réduction par utilisation de la règle 1 (program)

    program  aller à l'état 1


État 1

    0 $accept: program . $end
    2 program: program . function

    $end  décalage et aller à l'état 2

    tINT      réduction par utilisation de la règle 5 ($@2)
    $défaut  réduction par utilisation de la règle 3 ($@1)

    function  aller à l'état 3
    $@1       aller à l'état 4
    $@2       aller à l'état 5


État 2

    0 $accept: program $end .

    $défaut  accepter


État 3

    2 program: program function .

    $défaut  réduction par utilisation de la règle 2 (program)


État 4

    4 function: $@1 . tVOID tID tLPAR parameters tRPAR tLBRACE statement tRBRACE

    tVOID  décalage et aller à l'état 6


État 5

    6 function: $@2 . tINT tID tLPAR parameters tRPAR tLBRACE statement Return tSEMI tRBRACE

    tINT  décalage et aller à l'état 7


État 6

    4 function: $@1 tVOID . tID tLPAR parameters tRPAR tLBRACE statement tRBRACE

    tID  décalage et aller à l'état 8


État 7

    6 function: $@2 tINT . tID tLPAR parameters tRPAR tLBRACE statement Return tSEMI tRBRACE

    tID  décalage et aller à l'état 9


État 8

    4 function: $@1 tVOID tID . tLPAR parameters tRPAR tLBRACE statement tRBRACE

    tLPAR  décalage et aller à l'état 10


État 9

    6 function: $@2 tINT tID . tLPAR parameters tRPAR tLBRACE statement Return tSEMI tRBRACE

    tLPAR  décalage et aller à l'état 11


État 10

    4 function: $@1 tVOID tID tLPAR . parameters tRPAR tLBRACE statement tRBRACE

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 26 (parameter)

    parameters  aller à l'état 14
    parameter   aller à l'état 15


État 11

    6 function: $@2 tINT tID tLPAR . parameters tRPAR tLBRACE statement Return tSEMI tRBRACE

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 26 (parameter)

    parameters  aller à l'état 16
    parameter   aller à l'état 15


État 12

   28 parameter: tINT . tID

    tID  décalage et aller à l'état 17


État 13

   27 parameter: tVOID .

    $défaut  réduction par utilisation de la règle 27 (parameter)


État 14

    4 function: $@1 tVOID tID tLPAR parameters . tRPAR tLBRACE statement tRBRACE
   25 parameters: parameters . tCOMMA parameter

    tRPAR   décalage et aller à l'état 18
    tCOMMA  décalage et aller à l'état 19


État 15

   24 parameters: parameter .

    $défaut  réduction par utilisation de la règle 24 (parameters)


État 16

    6 function: $@2 tINT tID tLPAR parameters . tRPAR tLBRACE statement Return tSEMI tRBRACE
   25 parameters: parameters . tCOMMA parameter

    tRPAR   décalage et aller à l'état 20
    tCOMMA  décalage et aller à l'état 19


État 17

   28 parameter: tINT tID .

    $défaut  réduction par utilisation de la règle 28 (parameter)


État 18

    4 function: $@1 tVOID tID tLPAR parameters tRPAR . tLBRACE statement tRBRACE

    tLBRACE  décalage et aller à l'état 21


État 19

   25 parameters: parameters tCOMMA . parameter

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 26 (parameter)

    parameter  aller à l'état 22


État 20

    6 function: $@2 tINT tID tLPAR parameters tRPAR . tLBRACE statement Return tSEMI tRBRACE

    tLBRACE  décalage et aller à l'état 23


État 21

    4 function: $@1 tVOID tID tLPAR parameters tRPAR tLBRACE . statement tRBRACE

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 30
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 22

   25 parameters: parameters tCOMMA parameter .

    $défaut  réduction par utilisation de la règle 25 (parameters)


État 23

    6 function: $@2 tINT tID tLPAR parameters tRPAR tLBRACE . statement Return tSEMI tRBRACE

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 37
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 24

   34 if: tIF . tLPAR expression tRPAR body
   35   | tIF . tLPAR expression tRPAR body tELSE body
   36   | tIF . tLPAR logique tRPAR body
   37   | tIF . tLPAR logique tRPAR body tELSE body

    tLPAR  décalage et aller à l'état 38


État 25

   31 while: tWHILE . tLPAR expression tRPAR body

    tLPAR  décalage et aller à l'état 39


État 26

   32 print: tPRINT . tLPAR tID tRPAR tSEMI

    tLPAR  décalage et aller à l'état 40


État 27

   14 declarations_int: tINT . declaration_int declarations1_int

    tID  décalage et aller à l'état 41

    declaration_int  aller à l'état 42


État 28

   19 declarations_const: tCONST . declaration_const declarations1_const

    tID  décalage et aller à l'état 43

    declaration_const  aller à l'état 44


État 29

   38 assign: tID . tASSIGN term

    tASSIGN  décalage et aller à l'état 45


État 30

    4 function: $@1 tVOID tID tLPAR parameters tRPAR tLBRACE statement . tRBRACE

    tRBRACE  décalage et aller à l'état 46


État 31

    8 statement: declarations_int . tSEMI statement

    tSEMI  décalage et aller à l'état 47


État 32

    9 statement: declarations_const . tSEMI statement

    tSEMI  décalage et aller à l'état 48


État 33

   11 statement: while . statement

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 49
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 34

   13 statement: print . statement

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 50
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 35

   12 statement: if . statement

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 51
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 36

   10 statement: assign . tSEMI statement

    tSEMI  décalage et aller à l'état 52


État 37

    6 function: $@2 tINT tID tLPAR parameters tRPAR tLBRACE statement . Return tSEMI tRBRACE

    tRETURN  décalage et aller à l'état 53

    Return  aller à l'état 54


État 38

   34 if: tIF tLPAR . expression tRPAR body
   35   | tIF tLPAR . expression tRPAR body tELSE body
   36   | tIF tLPAR . logique tRPAR body
   37   | tIF tLPAR . logique tRPAR body tELSE body

    tID   décalage et aller à l'état 55
    tNB   décalage et aller à l'état 56
    tNOT  décalage et aller à l'état 57

    term        aller à l'état 58
    expression  aller à l'état 59
    logique     aller à l'état 60


État 39

   31 while: tWHILE tLPAR . expression tRPAR body

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term        aller à l'état 58
    expression  aller à l'état 61


État 40

   32 print: tPRINT tLPAR . tID tRPAR tSEMI

    tID  décalage et aller à l'état 62


État 41

   15 declaration_int: tID .
   16                | tID . tASSIGN term

    tASSIGN  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 15 (declaration_int)


État 42

   14 declarations_int: tINT declaration_int . declarations1_int

    tCOMMA  décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 17 (declarations1_int)

    declarations1_int  aller à l'état 65


État 43

   20 declaration_const: tID .
   21                  | tID . tASSIGN term

    tASSIGN  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 20 (declaration_const)


État 44

   19 declarations_const: tCONST declaration_const . declarations1_const

    tCOMMA  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 22 (declarations1_const)

    declarations1_const  aller à l'état 68


État 45

   38 assign: tID tASSIGN . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 69


État 46

    4 function: $@1 tVOID tID tLPAR parameters tRPAR tLBRACE statement tRBRACE .

    $défaut  réduction par utilisation de la règle 4 (function)


État 47

    8 statement: declarations_int tSEMI . statement

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 70
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 48

    9 statement: declarations_const tSEMI . statement

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 71
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 49

   11 statement: while statement .

    $défaut  réduction par utilisation de la règle 11 (statement)


État 50

   13 statement: print statement .

    $défaut  réduction par utilisation de la règle 13 (statement)


État 51

   12 statement: if statement .

    $défaut  réduction par utilisation de la règle 12 (statement)


État 52

   10 statement: assign tSEMI . statement

    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27
    tCONST  décalage et aller à l'état 28
    tID     décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 7 (statement)

    statement           aller à l'état 72
    declarations_int    aller à l'état 31
    declarations_const  aller à l'état 32
    while               aller à l'état 33
    print               aller à l'état 34
    if                  aller à l'état 35
    assign              aller à l'état 36


État 53

   33 Return: tRETURN . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 73


État 54

    6 function: $@2 tINT tID tLPAR parameters tRPAR tLBRACE statement Return . tSEMI tRBRACE

    tSEMI  décalage et aller à l'état 74


État 55

   39 term: tID .
   45     | tID . tLPAR args tRPAR

    tLPAR  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 39 (term)


État 56

   40 term: tNB .

    $défaut  réduction par utilisation de la règle 40 (term)


État 57

   56 logique: tNOT . expression

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term        aller à l'état 58
    expression  aller à l'état 76


État 58

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term
   48 expression: term . tNE term
   49           | term . tEQ term
   50           | term . tGE term
   51           | term . tLE term
   52           | term . tLT term
   53           | term . tGT term

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80
    tEQ   décalage et aller à l'état 81
    tNE   décalage et aller à l'état 82
    tLT   décalage et aller à l'état 83
    tLE   décalage et aller à l'état 84
    tGT   décalage et aller à l'état 85
    tGE   décalage et aller à l'état 86


État 59

   34 if: tIF tLPAR expression . tRPAR body
   35   | tIF tLPAR expression . tRPAR body tELSE body
   54 logique: expression . tAND expression
   55        | expression . tOR expression

    tRPAR  décalage et aller à l'état 87
    tAND   décalage et aller à l'état 88
    tOR    décalage et aller à l'état 89


État 60

   36 if: tIF tLPAR logique . tRPAR body
   37   | tIF tLPAR logique . tRPAR body tELSE body

    tRPAR  décalage et aller à l'état 90


État 61

   31 while: tWHILE tLPAR expression . tRPAR body

    tRPAR  décalage et aller à l'état 91


État 62

   32 print: tPRINT tLPAR tID . tRPAR tSEMI

    tRPAR  décalage et aller à l'état 92


État 63

   16 declaration_int: tID tASSIGN . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 93


État 64

   18 declarations1_int: tCOMMA . declaration_int declarations1_int

    tID  décalage et aller à l'état 41

    declaration_int  aller à l'état 94


État 65

   14 declarations_int: tINT declaration_int declarations1_int .

    $défaut  réduction par utilisation de la règle 14 (declarations_int)


État 66

   21 declaration_const: tID tASSIGN . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 95


État 67

   23 declarations1_const: tCOMMA . declaration_const declarations1_const

    tID  décalage et aller à l'état 43

    declaration_const  aller à l'état 96


État 68

   19 declarations_const: tCONST declaration_const declarations1_const .

    $défaut  réduction par utilisation de la règle 19 (declarations_const)


État 69

   38 assign: tID tASSIGN term .
   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 38 (assign)


État 70

    8 statement: declarations_int tSEMI statement .

    $défaut  réduction par utilisation de la règle 8 (statement)


État 71

    9 statement: declarations_const tSEMI statement .

    $défaut  réduction par utilisation de la règle 9 (statement)


État 72

   10 statement: assign tSEMI statement .

    $défaut  réduction par utilisation de la règle 10 (statement)


État 73

   33 Return: tRETURN term .
   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 33 (Return)


État 74

    6 function: $@2 tINT tID tLPAR parameters tRPAR tLBRACE statement Return tSEMI . tRBRACE

    tRBRACE  décalage et aller à l'état 97


État 75

   45 term: tID tLPAR . args tRPAR

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 98
    args  aller à l'état 99


État 76

   56 logique: tNOT expression .

    $défaut  réduction par utilisation de la règle 56 (logique)


État 77

   42 term: term tADD . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 100


État 78

   41 term: term tSUB . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 101


État 79

   43 term: term tMUL . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 102


État 80

   44 term: term tDIV . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 103


État 81

   49 expression: term tEQ . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 104


État 82

   48 expression: term tNE . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 105


État 83

   52 expression: term tLT . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 106


État 84

   51 expression: term tLE . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 107


État 85

   53 expression: term tGT . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 108


État 86

   50 expression: term tGE . term

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term  aller à l'état 109


État 87

   34 if: tIF tLPAR expression tRPAR . body
   35   | tIF tLPAR expression tRPAR . body tELSE body

    tLBRACE  décalage et aller à l'état 110

    body  aller à l'état 111


État 88

   54 logique: expression tAND . expression

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term        aller à l'état 58
    expression  aller à l'état 112


État 89

   55 logique: expression tOR . expression

    tID  décalage et aller à l'état 55
    tNB  décalage et aller à l'état 56

    term        aller à l'état 58
    expression  aller à l'état 113


État 90

   36 if: tIF tLPAR logique tRPAR . body
   37   | tIF tLPAR logique tRPAR . body tELSE body

    tLBRACE  décalage et aller à l'état 110

    body  aller à l'état 114


État 91

   31 while: tWHILE tLPAR expression tRPAR . body

    tLBRACE  décalage et aller à l'état 110

    body  aller à l'état 115


État 92

   32 print: tPRINT tLPAR tID tRPAR . tSEMI

    tSEMI  décalage et aller à l'état 116


État 93

   16 declaration_int: tID tASSIGN term .
   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 16 (declaration_int)


État 94

   18 declarations1_int: tCOMMA declaration_int . declarations1_int

    tCOMMA  décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 17 (declarations1_int)

    declarations1_int  aller à l'état 117


État 95

   21 declaration_const: tID tASSIGN term .
   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 21 (declaration_const)


État 96

   23 declarations1_const: tCOMMA declaration_const . declarations1_const

    tCOMMA  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 22 (declarations1_const)

    declarations1_const  aller à l'état 118


État 97

    6 function: $@2 tINT tID tLPAR parameters tRPAR tLBRACE statement Return tSEMI tRBRACE .

    $défaut  réduction par utilisation de la règle 6 (function)


État 98

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term
   46 args: term .
   47     | term . tCOMMA args

    tADD    décalage et aller à l'état 77
    tSUB    décalage et aller à l'état 78
    tMUL    décalage et aller à l'état 79
    tDIV    décalage et aller à l'état 80
    tCOMMA  décalage et aller à l'état 119

    $défaut  réduction par utilisation de la règle 46 (args)


État 99

   45 term: tID tLPAR args . tRPAR

    tRPAR  décalage et aller à l'état 120


État 100

   41 term: term . tSUB term
   42     | term . tADD term
   42     | term tADD term .
   43     | term . tMUL term
   44     | term . tDIV term

    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 42 (term)


État 101

   41 term: term . tSUB term
   41     | term tSUB term .
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term

    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 41 (term)


État 102

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   43     | term tMUL term .
   44     | term . tDIV term

    $défaut  réduction par utilisation de la règle 43 (term)


État 103

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term
   44     | term tDIV term .

    $défaut  réduction par utilisation de la règle 44 (term)


État 104

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term
   49 expression: term tEQ term .

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 49 (expression)


État 105

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term
   48 expression: term tNE term .

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 48 (expression)


État 106

   41 term: term . tSUB term
   42     | term . tADD term
   43     | term . tMUL term
   44     | term . tDIV term
   52 expression: term tLT term .

    tADD  décalage et aller à l'état 77
    tSUB  décalage et aller à l'état 78
    tMUL  décalage et aller à l'état 79
    tDIV  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 52 (expression)


État 107
